# csc299-project

Final Project/: README.md  pyproject.toml
Final Project/Prototypes/: __init__.py(hw functionality).py
Final Project/assignments/done/: hw1.txt
Final Project/tests/: test_tasks_extra.py
final/: README.md  SUMMARY.md  final.py  pyproject.toml  tasks3.py  video.txt
final/Prototypes/: __init__.py(task1).py
final/assignments/: hw1.txt
final/final/: __init__.py  __main__.py
final/src/final/: __init__.py  tasks.json
final/tasks3/: __init__.py
final/tests/: test_inc.py  test_tasks.py  test_tasks_extra.py
tasks1/: tasks.json
tasks1/simple-task-cli/: README.md  pyproject.toml  requirements.txt
tasks1/simple-task-cli/data/: tasks.json
tasks1/simple-task-cli/src/simple_task_cli/: cli.py
tasks2/simple-task-cli/src/simple_task_cli/: models.py  storage.py
tasks2/simple-task-cli/tests/: test_cli.py
tasks3/src/tasks3/: __init__.py
tasks3/tests/: test_inc.py  test_tasks.py
tasks4/: pyproject.toml
tasks4/src/tasks4/: __init__.py
tasks5/: CONTRIBUTING.md  DEVELOPMENT_LOG.md  INSTRUCTIONS.md  README.md  pyproject.toml
tasks5/tasker/: __init__.py  cli.py  storage.py
tasks5/tests/: test_storage.py
