[project]
name = "tasks4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arturo", email = "atorr129@depaul.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "openai>=2.8.1",
    "typer>=0.20.0",
]

[project.scripts]
tasks4 = "tasks4:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
