[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tasker"
version = "0.0.0"
description = "Small JSON-backed task CLI prototype"
authors = [ { name = "a2006tr" } ]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = []

[project.scripts]
tasker = "tasker.cli:main"
